--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,6 +6,7 @@ readme = "README.md"
 requires-python = ">=3.13"
 dependencies = [
     "exif>=1.6.1",
+    "icecream>=2.1.10",
     "ipywidgets>=8.1.8",
     "pandas>=3.0.0",
     "ultralytics>=8.4.9",
