--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,6 +8,7 @@ dependencies = [
     "exif>=1.6.1",
     "icecream>=2.1.10",
     "ipywidgets>=8.1.8",
+    "nbconvert>=7.17.0",
     "pandas>=3.0.0",
     "shapely>=2.1.2",
     "ultralytics>=8.4.9",
